Reestructuracion de la pagina modificando los archivos index.html y site-style.css, ademas de iconos agregados para su uso en la pagina

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!--
-										|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										||||||||||ZERO+PLUS                                        ||||||||||
-										||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON ||||||||||
-										||||||||||COPYRIGHT 2020 ZERO+PLUS 		zero-plus.github.com ||||||||||
-										|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+										||||||||||ZERO+PLUS                                           ||||||||||
+										||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+										||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 -->
 <!DOCTYPE html>
 <html lang="es">
@@ -19,27 +19,35 @@
 	</head>
 
 	<body>
-		<div id="container" class="col-3">
+		<div id="main-container">
 			<div id="header">
-				<div class="link">
-					<a class="links lnk1" href="" target="_blank"><img src="images/facebook.svg"/></a>
-					<a class="links lnk2" href="" target="_blank"><img src="images/twitter.svg"/></a>
-					<a class="links lnk3" href="" target="_blank"><img src="images/instagram.svg"/></a>
+				<div id="left-header">
+					<p class="left-links link1"><a href="https://www.freecodecamp.org/njrzr" target="_blank"><img src="images/icons/freecodecamp.svg"/></a></p>
+					<p class="left-links link2"><a href="https://github.com/njrzr" target="_blank"><img src="images/icons/github_alt.svg"/></a></p>
+					<p class="left-links link3"><a href="https://codepen.io/NJRZR" target="_blank"><img src="images/icons/codepen.svg"/></a></p>
 				</div>
 
-				<div id="banner">
-					<div id="logo">
-						<a id="lnk-logo" href=""></a>
-					</div>
-					<ul>
-						<a href=""><li class="options">PORTAFOLIO</li></a>
-						<a href=""><li class="options">SERVICIOS</li></a>
-					</ul>
+				<div id="right-header">
+					<div id="logo"><a href="https://github.com/njrzr/zero-plus"></a></div>
+					<p class="right-links"><a href="#portfolio">PORTAFOLIO</a></p>
+					<p class="right-links"><a href="#services">SERVICIOS</a></p>
 				</div>
 			</div>
 
+			<div id="welcome">
+				<p id="construction">
+					EN CONSTRUCCIÓN
+				</p>
+			</div>
+
+			<div id="services">
+			</div>
+
+			<div id="portfolio">
+			</div>
+
 			<footer id="footer">
-				<p id="copyr">&copy; 2020 ZERO+PLUS<p>
+				<p id="copyright">&copy; 2020 ZERO+PLUS<p>
 			</footer>
 		</div>
 		<script src="javascript/javascript.js"></script>
