Reestructuracion de la pagina modificando los archivos index.html y site-style.css, ademas de iconos agregados para su uso en la pagina

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</div>
 
 				<div id="right-header">
-					<div id="logo"><a href="https://github.com/njrzr/zero-plus"></a></div>
+					<div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank"></a></div>
 					<p class="right-links"><a href="#portfolio">PORTAFOLIO</a></p>
 					<p class="right-links"><a href="#services">SERVICIOS</a></p>
 				</div>
