Actualizacion de archivos de imagen, y arreglos a la pagina para que sea web responsive

--- a/index.html
+++ b/index.html
@@ -1,55 +1,66 @@
 <!--
-										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										||||||||||ZERO+PLUS                                           ||||||||||
-										||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
-										||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
-										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-										||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+                    ||||||||||ZERO+PLUS                                           ||||||||||
+                    ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+                    ||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 -->
 <!DOCTYPE html>
 <html lang="es">
 
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width"/>
-		<title>ZERO+PLUS</title>
-		<link rel="stylesheet" type="text/css" href="css/site-style.css"/>
-		<link rel="icon" type="image/svg" href="images/favicon.png"/>
-	</head>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width"/>
+    <title>ZERO+PLUS</title>
+    <link rel="stylesheet" type="text/css" href="css/site-style.css"/>
+    <link rel="icon" type="image/svg" href="images/favicon.png"/>
+  </head>
 
-	<body>
-		<div id="main-container">
-			<div id="header">
-				<div id="left-header">
-					<p class="left-links link1"><a href="https://www.freecodecamp.org/njrzr" target="_blank"><img src="images/icons/freecodecamp.svg"/></a></p>
-					<p class="left-links link2"><a href="https://github.com/njrzr" target="_blank"><img src="images/icons/github_alt.svg"/></a></p>
-					<p class="left-links link3"><a href="https://codepen.io/NJRZR" target="_blank"><img src="images/icons/codepen.svg"/></a></p>
-				</div>
+  <body>
+    <div id="main-container">
+      <div id="header">
+        <div id="left-header">
+          <p class="left-links link1"><a href="https://www.freecodecamp.org/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/freecodecamp.svg"/></a></p>
+          <p class="left-links link2"><a href="https://github.com/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/github_alt.svg"/></a></p>
+          <p class="left-links link3"><a href="https://codepen.io/NJRZR" target="_blank" rel="noreferrer"><img src="images/icons/codepen.svg"/></a></p>
+        </div>
 
-				<div id="right-header">
-					<div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank"></a></div>
-					<p class="right-links"><a href="#portfolio">PORTAFOLIO</a></p>
-					<p class="right-links"><a href="#services">SERVICIOS</a></p>
-				</div>
-			</div>
+        <div id="right-header">
+          <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer"></a></div>
+          <p class="right-links"><a href="#portfolio">PORTAFOLIO</a></p>
+          <p class="right-links"><a href="#services">SERVICIOS</a></p>
+        </div>
+      </div>
 
-			<div id="welcome">
-				<p id="construction">
-					EN CONSTRUCCIÓN
-				</p>
-			</div>
+      <div id="welcome">
+        <p id="construction">
+          EN CONSTRUCCIÓN
+        </p>
+      </div>
 
-			<div id="services">
-			</div>
+      <div id="services">
+      </div>
 
-			<div id="portfolio">
-			</div>
+      <div id="portfolio">
+      </div>
 
-			<footer id="footer">
-				<p id="copyright">&copy; 2020 ZERO+PLUS<p>
-			</footer>
-		</div>
-		<script src="javascript/javascript.js"></script>
-	</body>
+      <footer id="footer">
+        <p id="copyright">&copy; 2020 ZERO+PLUS<p>
+      </footer>
+    </div>
+    <script src="javascript/javascript.js"></script>
+  </body>
 </html>
+<!--
+  Background(s) used are from:
+  - Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
+
+  Font(s) used are from:
+  - JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
+
+  Icon(s) used are from:
+  - Logos & Brand set from Iconfider https://www.iconfinder.com/iconfinder
+  - Logos and Brand set from Flatart https://www.iconfinder.com/Flatart
+-->
