--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
                     ||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
                     ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
                     ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+
+Background(s) used are from:
+- Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
+
+Font(s) used are from:
+- JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
+
+Icon(s) used are from:
+- Logos & Brand set from Iconfider https://www.iconfinder.com/iconfinder
+- Logos and Brand set from Flatart https://www.iconfinder.com/Flatart
 -->
 <!DOCTYPE html>
 <html lang="es">
@@ -29,38 +39,33 @@
 
         <div id="right-header">
           <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer"></a></div>
-          <p class="right-links"><a href="#portfolio">PORTAFOLIO</a></p>
-          <p class="right-links"><a href="#services">SERVICIOS</a></p>
+          <p class="right-links"><a href="#portfolio">PORTAFOLIOS</a></p>
         </div>
       </div>
 
       <div id="welcome">
-        <p id="construction">
-          EN CONSTRUCCIÓN
-        </p>
-      </div>
-
-      <div id="services">
+        <p id="welcome-text">Hola bienvenido, mi nombre es Orlando Pernia soy un desarrollador junior.<br><br>ZERO+PLUS es mi proyecto freelance, en el cual ofrezco mis habilidades en diseño y creación de páginas Web en el área del frontend, además de enlaces a mi portafolios el cual se compone de proyectos personales y páginas Web hechas a mis clientes, y también información de contacto o relevante a mi persona. Espero disfruten su visita en el sitio.<br><br>Los servicios que ofrezco por los momentos estan limitados a: diseño, maquetado y creación de páginas web, y currículos personalizados en HTML para compartir en tu pagina web y para imprimir.</p>
       </div>
 
       <div id="portfolio">
+        <h1 id="portfolio-title-zero">Portafolios: clientes.</h1>
+        <div class="portfolio-button"><a href="#header"></a></div>
+        <h1 id="portfolio-title-one">Portafolios: proyectos personales.</h1>
+        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.png" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
+        <!--div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en-memoria-01/" target="_blank" rel="noreferrer"><img src="images/thumb06.png" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div-->
+        <div class="portfolio-button"><a href="#header"></a></div>
+        <h1 id="portfolio-title-two">Portafolios: freeCodeCamp.</h1>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.png" alt="project thumbnail">Página tributo</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.png" alt="project thumbnail">Formulario de encuesta</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.png" alt="project thumbnail">Página de inicio</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.png" alt="project thumbnail">Página de documentación</a></div>
+        <div class="portfolio-button"><a href="#header"></a></div>
       </div>
 
       <footer id="footer">
-        <p id="copyright">&copy; 2020 ZERO+PLUS<p>
+        <p id="copyright">&copy; 2020 ZERO+PLUS</p>
       </footer>
     </div>
     <script src="javascript/javascript.js"></script>
   </body>
 </html>
-<!--
-  Background(s) used are from:
-  - Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
-
-  Font(s) used are from:
-  - JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
-
-  Icon(s) used are from:
-  - Logos & Brand set from Iconfider https://www.iconfinder.com/iconfinder
-  - Logos and Brand set from Flatart https://www.iconfinder.com/Flatart
--->
