"Cambios en el hoja de estilo"

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ Icon(s) used are from:
       </div>
 
       <footer id="footer">
+        <div id="contacts">
+          <!--a href="mailto:empresa.zeroplus@gmail.com" target="_blank" rel="noopener noreferrer">empresa.zeroplus@gmail.com</a-->
+        </div>
         <p id="copyright">&copy; 2020 ZERO+PLUS</p>
       </footer>
     </div>
