Cambios en index y hoja de estilo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Icon(s) used are from:
         <div class="portfolio-button"><a href="#header"></a></div>
         <h1 id="portfolio-title-one">Portafolios: proyectos personales.</h1>
         <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.png" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
-        <!--div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en-memoria-01/" target="_blank" rel="noreferrer"><img src="images/thumb06.png" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div-->
+        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.png" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
         <div class="portfolio-button"><a href="#header"></a></div>
         <h1 id="portfolio-title-two">Portafolios: freeCodeCamp.</h1>
         <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.png" alt="project thumbnail">Página tributo</a></div>
@@ -63,9 +63,6 @@ Icon(s) used are from:
       </div>
 
       <footer id="footer">
-        <div id="contacts">
-          <!--a href="mailto:empresa.zeroplus@gmail.com" target="_blank" rel="noopener noreferrer">empresa.zeroplus@gmail.com</a-->
-        </div>
         <p id="copyright">&copy; 2020 ZERO+PLUS</p>
       </footer>
     </div>
