Cambios en la hoja de estilo e index

--- a/index.html
+++ b/index.html
@@ -1,22 +1,3 @@
-<!--
-                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-                    ||||||||||ZERO+PLUS                                           ||||||||||
-                    ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
-                    ||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
-                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-                    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-
-Background(s) used are from:
-- Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
-
-Font(s) used are from:
-- JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
-
-Icon(s) used are from:
-- Logos & Brand set from Iconfider https://www.iconfinder.com/iconfinder
-- Logos and Brand set from Flatart https://www.iconfinder.com/Flatart
--->
 <!DOCTYPE html>
 <html lang="es">
 
@@ -32,13 +13,13 @@ Icon(s) used are from:
     <div id="main-container">
       <div id="header">
         <div id="left-header">
-          <p class="left-links link1"><a href="https://www.freecodecamp.org/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/freecodecamp.svg"/></a></p>
-          <p class="left-links link2"><a href="https://github.com/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/github_alt.svg"/></a></p>
-          <p class="left-links link3"><a href="https://codepen.io/NJRZR" target="_blank" rel="noreferrer"><img src="images/icons/codepen.svg"/></a></p>
+          <p class="left-links link1"><a href="https://www.freecodecamp.org/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/freecodecamp.svg" alt="freeCodeCamp"></a></p>
+          <p class="left-links link2"><a href="https://github.com/njrzr" target="_blank" rel="noreferrer"><img src="images/icons/github_alt.svg" alt="GitHub"></a></p>
+          <p class="left-links link3"><a href="https://codepen.io/NJRZR" target="_blank" rel="noreferrer"><img src="images/icons/codepen.svg" alt="Codepen"></a></p>
         </div>
 
         <div id="right-header">
-          <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer"></a></div>
+          <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer"><img id="logo-img" src="images/logo1.png" alt="logo del sitio"></a></div>
           <p class="right-links"><a href="#portfolio">PORTAFOLIOS</a></p>
         </div>
       </div>
@@ -49,17 +30,17 @@ Icon(s) used are from:
 
       <div id="portfolio">
         <h1 id="portfolio-title-zero">Portafolios: clientes.</h1>
-        <div class="portfolio-button"><a href="#header"></a></div>
+        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
         <h1 id="portfolio-title-one">Portafolios: proyectos personales.</h1>
         <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.png" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
         <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.png" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
-        <div class="portfolio-button"><a href="#header"></a></div>
+        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
         <h1 id="portfolio-title-two">Portafolios: freeCodeCamp.</h1>
         <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.png" alt="project thumbnail">Página tributo</a></div>
         <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.png" alt="project thumbnail">Formulario de encuesta</a></div>
         <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.png" alt="project thumbnail">Página de inicio</a></div>
         <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.png" alt="project thumbnail">Página de documentación</a></div>
-        <div class="portfolio-button"><a href="#header"></a></div>
+        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
       <footer id="footer">
@@ -69,3 +50,23 @@ Icon(s) used are from:
     <script src="javascript/javascript.js"></script>
   </body>
 </html>
+
+<!--
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||ZERO+PLUS                                           ||||||||||
+        ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+        ||||||||||COPYRIGHT 2020 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+
+Background(s) used are from:
+- Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
+
+Font(s) used are from:
+- JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
+
+Icon(s) used are from:
+- Logos & Brand set from Iconfider https://www.iconfinder.com/iconfinder
+- Logos & Brand set from Flatart https://www.iconfinder.com/Flatart
+-->
