Cambios a hoja de estilo e index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </div>
 
         <div id="right-header">
-          <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer"><img id="logo-img" src="images/logo1.png" alt="logo del sitio"></a></div>
+          <div id="logo"><a href="https://github.com/njrzr/zero-plus" target="_blank" rel="noreferrer">
+            <img id="logo-img1" src="images/logo1.png" alt="logo del sitio">
+            <img id="logo-img2" src="images/logo_text1.png" alt="logo del sitio">
+          </a></div>
           <p class="right-links"><a href="#portfolio">PORTAFOLIOS</a></p>
         </div>
       </div>
