--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <h1 id="portfolio-title-zero">Portafolios: clientes.</h1>
         <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
         <h1 id="portfolio-title-one">Portafolios: proyectos personales.</h1>
-        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.png" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.png" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.webp" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.webp" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
         <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
         <h1 id="portfolio-title-two">Portafolios: freeCodeCamp.</h1>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.png" alt="project thumbnail">Página tributo</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.png" alt="project thumbnail">Formulario de encuesta</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.png" alt="project thumbnail">Página de inicio</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.png" alt="project thumbnail">Página de documentación</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.webp" alt="project thumbnail">Página tributo</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.webp" alt="project thumbnail">Formulario de encuesta</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.webp" alt="project thumbnail">Página de inicio</a></div>
+        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.webp" alt="project thumbnail">Página de documentación</a></div>
         <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
