Etiqueta de descripción agregada a index, cambios a archivos script y css, y cambio de fondo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
+    <meta name="Description" content="ZERO + PLUS, website freelance que ofrece servicios de creacion de paginas web para individuos y pequeñas/medianas empresas">
     <title>ZERO+PLUS</title>
     <link rel="stylesheet" type="text/css" href="css/site-style.css"/>
     <link rel="icon" type="image/svg" href="images/favicon.png"/>
@@ -28,7 +29,7 @@
       </div>
 
       <div id="welcome">
-        <p id="welcome-text">Hola bienvenido, mi nombre es Orlando Pernia soy un desarrollador junior.<br><br>ZERO+PLUS es mi proyecto freelance, en el cual ofrezco mis habilidades en diseño y creación de páginas Web en el área del frontend, además de enlaces a mi portafolios el cual se compone de proyectos personales y páginas Web hechas a mis clientes, y también información de contacto o relevante a mi persona. Espero disfruten su visita en el sitio.<br><br>Los servicios que ofrezco por los momentos estan limitados a: diseño, maquetado y creación de páginas web, y currículos personalizados en HTML para compartir en tu pagina web y para imprimir.</p>
+        <p id="welcome-text">Hola bienvenido, mi nombre es Orlando Pernia soy un desarrollador junior.<br><br>ZERO+PLUS es mi proyecto freelance, en el cual ofrezco mis habilidades en diseño y creación de páginas Web en el área del frontend, además de enlaces a mi portafolios el cual se compone de proyectos personales y páginas Web hechas a mis clientes, y también información de contacto o relevante a mi persona. Espero disfruten su visita en el sitio.<br><br>Los servicios que ofrezco por los momentos estan limitados a: diseño, maquetado y creación de páginas web, y <s>currículos personalizados en HTML para compartir en tu pagina web y para imprimir.</s></p>
       </div>
 
       <div id="portfolio">
