Prueba de buscador google

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>ZERO+PLUS</title>
     <link rel="stylesheet" type="text/css" href="css/site-style.css"/>
     <link rel="icon" type="image/svg" href="images/favicon.png"/>
+    <meta name="google-site-verification" content="KKAdWXA57QxppbBEVAgtmz4LGZcv_PpXhNybfoinUY0" />
   </head>
 
   <body>
