--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="Description" content="ZERO + PLUS, website freelance que ofrece servicios de creacion de paginas web para individuos y pequeñas empresas">
     <title>ZERO+PLUS</title>
     <link rel="stylesheet" type="text/css" href="css/site-style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/site-style-tablet.css"/>
+    <link rel="stylesheet" type="text/css" href="css/site-style-mobile.css"/>
     <link rel="icon" type="image/svg" href="images/favicon.png"/>
   </head>
 
@@ -33,18 +35,21 @@
       </div>
 
       <div id="portfolio">
-        <h1 id="portfolio-title-zero">Portafolios: clientes.</h1>
-        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
-        <h1 id="portfolio-title-one">Portafolios: proyectos personales.</h1>
-        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.webp" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.webp" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
-        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
-        <h1 id="portfolio-title-two">Portafolios: freeCodeCamp.</h1>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.webp" alt="project thumbnail">Página tributo</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.webp" alt="project thumbnail">Formulario de encuesta</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.webp" alt="project thumbnail">Página de inicio</a></div>
-        <div class="portfolio"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.webp" alt="project thumbnail">Página de documentación</a></div>
-        <div class="portfolio-button"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
+        <h1 id="portfolio-title-one">Portafolios: clientes.</h1>
+        <div class="portfolio client-1"><a class="portfolio-links" href="https://njrzr.github.io/delicious/" target="_blank" rel="noreferrer"><img src="images/thumb07.png" alt="client thumbnail">deliciouslf.com</a></div>
+        <div class="portfolio-button button-1"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
+
+        <h1 id="portfolio-title-two">Portafolios: proyectos personales.</h1>
+        <div class="portfolio personal-1"><a class="portfolio-links" href="https://njrzr.github.io/conversor-zp/" target="_blank" rel="noreferrer"><img src="images/thumb05.webp" alt="personal project thumbnail">Conversor de divisas y criptomonedas</a></div>
+        <div class="portfolio personal-2"><a class="portfolio-links" href="https://njrzr.github.io/en_memoria-luis_pernia/" target="_blank" rel="noreferrer"><img src="images/thumb06.webp" alt="personal project thumbnail">En memoria: Luis Orlando Pernia Rujano</a></div>
+        <div class="portfolio-button button-2"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
+
+        <h1 id="portfolio-title-three">Portafolios: freeCodeCamp.</h1>
+        <div class="portfolio fcc-1"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/jOqWedj" target="_blank" rel="noreferrer"><img src="images/thumb01.webp" alt="project thumbnail">Página tributo</a></div>
+        <div class="portfolio fcc-2"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/VwaaLXb" target="_blank" rel="noreferrer"><img src="images/thumb02.webp" alt="project thumbnail">Formulario de encuesta</a></div>
+        <div class="portfolio fcc-3"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.webp" alt="project thumbnail">Página de inicio</a></div>
+        <div class="portfolio fcc-4"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.webp" alt="project thumbnail">Página de documentación</a></div>
+        <div class="portfolio-button button-3"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
       <footer id="footer">
