Cambios en archivo index y estilos.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
       <div id="portfolio">
         <h1 id="portfolio-title-one">Portafolios: clientes.</h1>
-        <div class="portfolio client-1"><a class="portfolio-links" href="https://njrzr.github.io/delicious/" target="_blank" rel="noreferrer"><img src="images/thumb07.png" alt="client thumbnail">deliciouslf.com</a></div>
         <div class="portfolio-button button-1"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
 
         <h1 id="portfolio-title-two">Portafolios: proyectos personales.</h1>
@@ -53,7 +52,7 @@
       </div>
 
       <footer id="footer">
-        <p id="copyright">&copy; 2020 ZERO+PLUS</p>
+        <p id="copyright">&copy; 2020 - 2021 ZERO+PLUS</p>
       </footer>
     </div>
     <script src="javascript/javascript.js"></script>
