--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <div class="portfolio fcc-3"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/OJNNRBW" target="_blank" rel="noreferrer"><img src="images/thumb03.webp" alt="project thumbnail">Página de inicio</a></div>
         <div class="portfolio fcc-4"><a class="portfolio-links" href="https://codepen.io/NJRZR/full/vYGGdrZ" target="_blank" rel="noreferrer"><img src="images/thumb04.webp" alt="project thumbnail">Página de documentación</a></div>
         <div class="portfolio-button button-3"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
+
+        <h1 id="portfolio-title-four">Portafolios: maquetas/mockups.</h1>
+        <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/index.hmtl" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta/mockup Bakery</a></div>
+        <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/index.hmtl" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Celebrity</a></div>
+        <div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/index.hmtl" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Landing Page</a></div>
+        <div class="portfolio-button button-4"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
       <footer id="footer">
@@ -68,8 +74,9 @@
         ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
         ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
-Background(s) used are from:
+Background(s)/image(s) used are from:
 - Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
+- Blue wall from Jude Beck https://unsplash.com/photos/x7XuqPB7L9A?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
 
 Font(s) used are from:
 - JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
