--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="portfolio-button button-3"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
 
         <h1 id="portfolio-title-four">Portafolios: maquetas/mockups.</h1>
-        <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/index.html" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta/mockup Bakery</a></div>
-        <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/index.html" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Celebrity</a></div>
-        <div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/index.html" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Landing Page</a></div>
+        <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta/mockup Bakery</a></div>
+        <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Celebrity</a></div>
+        <div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="" alt="project thumbnail">Maqueta/mockup Landing Page</a></div>
         <div class="portfolio-button button-4"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
