Cambios en index, y en archivos de la carpeta mockup_celebrity.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 id="portfolio-title-four">Portafolios: maquetas/mockups.</h1>
         <div class="portfolio mockup-1"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_bakery/" target="_blank" rel="noreferrer"><img src="images/thumb07.webp" alt="project thumbnail">Maqueta/mockup Bakery</a></div>
         <div class="portfolio mockup-2"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_celebrity/" target="_blank" rel="noreferrer"><img src="images/thumb08.webp" alt="project thumbnail">Maqueta/mockup Celebrity</a></div>
-        <div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta/mockup Landing Page</a></div>
+        <!--div class="portfolio mockup-3"><a class="portfolio-links" href="https://njrzr.github.io/zero-plus/mockup_landing/" target="_blank" rel="noreferrer"><img src="images/thumb09.webp" alt="project thumbnail">Maqueta/mockup Landing Page</a></div-->
         <div class="portfolio-button button-4"><a href="#header"><img class="arrow-button" src="images/arrow_2.svg" alt="button"></a></div>
       </div>
 
@@ -75,8 +75,7 @@
         ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 Background(s)/image(s) used are from:
-- Been away too long from Angelus-Hellion https://www.deviantart.com/angelus-hellion/art/Been-away-too-long-447468169
-- Blue wall from Jude Beck https://unsplash.com/photos/x7XuqPB7L9A?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+- Sai Kiran Anagani https://unsplash.com/photos/5Ntkpxqt54Y
 
 Font(s) used are from:
 - JetBrains Mono from JetBrains https://www.jetbrains.com/lp/mono/
