--- a/mockup_celebrity/index.html
+++ b/mockup_celebrity/index.html
@@ -7,8 +7,8 @@
     <meta name="Description" content="Celebrity/Influencer."/>
     <title>Mockup Celebrity</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <!--link rel="stylesheet" type="text/css" href="css/style-tablet.css"/-->
-    <!--link rel="stylesheet" type="text/css" href="css/style-mobile.css"/-->
+    <link rel="stylesheet" type="text/css" href="css/style-tablet.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style-mobile.css"/>
     <!--link rel="icon" type="image/svg" href="images/favicon.svg"/-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <div id="loader">
       <div id="load-animation"></div>
     </div>
-    <div id="main-container">
+    <div id="main-container" class="hidden">
       <header id="header">
         <p id="celebrity-name"><span id="celebrity-bold">CELEBRITY</span> NAME</p>
       </header>
@@ -87,11 +87,11 @@
       <footer id="footer">
         <div id="social-media">
           <p id="follow">FOLLOW US</p>
-          <a href="#" class="social-link"><img src="images/icons/facebook.svg" alt="social icon" class="social-media"><a>
-          <a href="#" class="social-link"><img src="images/icons/instagram.svg" alt="social icon" class="social-media"><a>
-          <a href="#" class="social-link"><img src="images/icons/twitter.svg" alt="social icon" class="social-media"><a>
-          <a href="#" class="social-link"><img src="images/icons/spotify.svg" alt="social icon" class="social-media"><a>
-          <a href="#" class="social-link"><img src="images/icons/youtube.svg" alt="social icon" class="social-media"><a>
+          <a href="#" class="social-link" title="Facebook"><img src="images/icons/facebook.svg" alt="social icon" class="social-media title="facebook""><a>
+          <a href="#" class="social-link" title="Instagram"><img src="images/icons/instagram.svg" alt="social icon" class="social-media title="facebook""><a>
+          <a href="#" class="social-link" title="Twitter"><img src="images/icons/twitter.svg" alt="social icon" class="social-media title="facebook""><a>
+          <a href="#" class="social-link" title="Spotify"><img src="images/icons/spotify.svg" alt="social icon" class="social-media title="facebook""><a>
+          <a href="#" class="social-link" title="YouTube"><img src="images/icons/youtube.svg" alt="social icon" class="social-media"><a>
         </div>
         <p id="copy">&copy;Celebrity 2020</p>
       </footer>
@@ -102,11 +102,22 @@
 </html>
 
 <!--
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||Mockup Celebrity                                    ||||||||||
-  ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
-  ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+          ||||||||||Mockup Celebrity                                    ||||||||||
+          ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+          ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+
+Background(s)/image(s) used are from:
+- Austin Neill https://unsplash.com/photos/hgO1wFPXl3I
+- Nathan Fertig https://unsplash.com/photos/IW5Bm4rB9OA
+- Rachel Coyne https://unsplash.com/photos/U7HLzMO4SIY
+- Anthony Delanoix https://unsplash.com/photos/hzgs56Ze49s
+- ActionVance https://unsplash.com/photos/eXVd7gDPO9A
+- Brett Jordan https://unsplash.com/photos/EIsideS4lTI
+
+Icon(s) used are from:
+- Social Media Icon Pack by freepik https://www.flaticon.com/packs/social-media-35
 -->
