Cambios en carpetas mockup bakery y celebrity.

--- a/mockup_bakery/index.html
+++ b/mockup_bakery/index.html
@@ -115,13 +115,18 @@
 </html>
 
 <!--
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||Bakery                                              ||||||||||
-  ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
-  ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-  ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||Mockup Bakery                                       ||||||||||
+        ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+        ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+
+Background(s)/image(s) used are from:
+- Sarah Shaffer https://unsplash.com/photos/KUNRtYp8qd8
+- Rudy Issa https://unsplash.com/photos/VXwbfqQ4ISE
+- Ekaterina Tyapkina https://unsplash.com/photos/b5kN9ClBRNU
 
 Icon(s) used are from:
 - Social Icons set from Just UI https://www.iconfinder.com/iconsets/social-icons-33
