--- a/mockup_celebrity/index.html
+++ b/mockup_celebrity/index.html
@@ -52,36 +52,28 @@
 
       <div id="merchandise">
         <p id="mer-text">Merchandise</p>
-        <div class="merc-item merc01"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #01</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc02"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #02</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc03"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #03</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc04"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #04</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc05"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #05</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc06"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #06</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc07"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #07</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc08"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #08</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc09"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #09</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc10"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #10</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc11"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #11</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc12"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #12</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc13"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #13</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc14"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #14</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
-        <div class="merc-item merc15"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
-        <p class="merc-desc">Merch Item #15</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <p id="cds">CD'S</p>
+        <div class="merc-item cd01"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">CD #01</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item cd02"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">CD #02</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item cd03"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">CD #03</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item cd04"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">CD #04</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item cd05"><img src="images/merch01.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">CD #05</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <p id="apparel">Apparel</p>
+        <div class="merc-item apparel01"><img src="images/merch02.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">Apparel #01</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item apparel02"><img src="images/merch02.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">Apparel #02</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item apparel03"><img src="images/merch02.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">Apparel #03</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item apparel04"><img src="images/merch02.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">Apparel #04</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
+        <div class="merc-item apparel05"><img src="images/merch02.webp" alt="merchandise" class="merc-img">
+        <p class="merc-desc">Apparel #05</p><button class="merc-btn">BUY ON AMAZON.COM</button></div>
       </div>
 
       <footer id="footer">
@@ -102,13 +94,13 @@
 </html>
 
 <!--
-          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-          ||||||||||Mockup Celebrity                                    ||||||||||
-          ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
-          ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
-          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-          ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||Mockup Celebrity                                    ||||||||||
+        ||||||||||SITIO WEB CREADO POR ANGEL ORLANDO PERNIA RONDON    ||||||||||
+        ||||||||||COPYRIGHT 2021 ZERO+PLUS   njrzr.github.io/zero-plus||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+        ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 Background(s)/image(s) used are from:
 - Austin Neill https://unsplash.com/photos/hgO1wFPXl3I
@@ -117,6 +109,7 @@ Background(s)/image(s) used are from:
 - Anthony Delanoix https://unsplash.com/photos/hzgs56Ze49s
 - ActionVance https://unsplash.com/photos/eXVd7gDPO9A
 - Brett Jordan https://unsplash.com/photos/EIsideS4lTI
+- Waldemat Brandt https://unsplash.com/photos/UP9DtTjRYpI
 
 Icon(s) used are from:
 - Social Media Icon Pack by freepik https://www.flaticon.com/packs/social-media-35
